@@ -2,3 +2,6 @@
 
 # This script will be executed in post-fs mode
 # More info in the main Magisk thread
+
+#setprop ro.audio.samplerate 48000
+#setprop ro.audio.pcm.samplerate 48000
